# hgt-bookkeeper

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml  requirements.txt
docs/: configuration.md  getting-started.md  index.md  philosophy.md  stripe-import.md
docs/tutorials/: first-import.md  quarterly-taxes.md  understanding-accrual.md
hgt_bookkeeper/: __main__.py  cli.py  config.py  database.py
hgt_bookkeeper/exporters/: __init__.py  gnucash.py
hgt_bookkeeper/importers/: __init__.py  base.py
hgt_bookkeeper/importers/stripe/: __init__.py  api.py  base.py  csv.py
