[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hgt-bookkeeper"
version = "0.1.0"
description = "Professional double-entry bookkeeping tools for self-employed individuals and small businesses using accrual accounting"
authors = [
    {name = "Larry Kann", email = "larry@huntgathertrade.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["accounting", "bookkeeping", "gnucash", "stripe", "self-employment", "taxes", "accrual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "rich~=13.7.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs~=1.5.0",
    "mkdocs-material~=9.5.0",
    "mkdocstrings[python]~=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
hgt-bookkeeper = "hgt_bookkeeper.cli:main"

[project.urls]
"Homepage" = "https://github.com/larrykann/hgt-bookkeeper"
"Bug Tracker" = "https://github.com/larrykann/hgt-bookkeeper/issues"
"Documentation" = "https://larrykann.github.io/hgt-bookkeeper"

[tool.setuptools.packages.find]
where = ["."]
include = ["hgt_bookkeeper*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
